Ajout du champ name aux input

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <form action="index.html" class="parameters">
         <div>
             <label for="amountInput">Mortgage amount :</label>
-            <input type="number" placeholder="200,000" id="amountInput">
+            <input type="number" placeholder="200,000" id="amountInput" name="amount">
             <p>€</p>
         </div>
         <div>
             <label for="rateInput">Interest rate :</label>
-            <input type="number" placeholder="3.1" id="rateInput">
+            <input type="number" placeholder="3.1" id="rateInput" name="rate">
             <p>%</p>
         </div>
         <div>
             <label for="durationInput">Mortgage duration :</label>
-            <input type="number" placeholder="20" id="durationInput">
+            <input type="number" placeholder="20" id="durationInput" name="duration">
             <p>years</p>
         </div>
         <button type="button">Compute</button>
