Ajout d'un bouton permettant de clear le formulaire

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
             <input type="number" placeholder="20" id="durationInput" name="duration">
             <p>years</p>
         </div>
-        <button type="button">Compute</button>
     </form>
+    
+    <div class="controlButtons">
+        <button type="button" class="computeButton">Compute</button>
+        <button type="button" class="clearButton">Clear</button>
+    </div>
 
     <div class="displayResults">
         <p class="textResult">Total interests :</p>
