Ajout d'un message d'information sur le format des entrées

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Compute easily your mortgage interests !</h1>
+
+    <div class="infoMessage">
+        <h2>Input format</h2>
+        <p>
+            The parameters 'Mortgage amount', 'Interest rate', and 'Mortgage duration' must be in German format, meaning that the thousands separator is a period, and the decimal separator is a comma.  <br/>
+            Examples: 32.000 ; 0,54
+        </p>
+    </div>
+
     <form action="index.html" class="parameters">
         <div>
             <label for="amountInput">Mortgage amount :</label>
