Calcul des mensualités

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="displayResults">
-        <p class="textResult">Total interests :</p>
+        <p class="textResult">Monthly payment :</p>
         <p class="computeResult">0.00 €</p>
     </div>
 
