Changed site title

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mortgage interests</title>
+    <title>Mortgage monthly payment</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="module"></script>
 </head>
 <body>
-    <h1>Compute easily your mortgage interests !</h1>
+    <h1>Compute monthly payment of your mortgage easily !</h1>
 
     <div class="infoMessage">
         <h2>Input format</h2>
