--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortgage monthly payment</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" type="module"></script>
+    <script src="script.mjs" type="module"></script>
 </head>
 <body>
     <h1>Compute monthly payment of your mortgage easily !</h1>
@@ -25,7 +25,7 @@
         </div>
         <div>
             <label for="rateInput">Interest rate :</label>
-            <input type="number" placeholder="3.1" id="rateInput" name="rate" step="0.01" min="0" max="100" required>
+            <input type="number" placeholder="3.1" id="rateInput" name="rate" step="0.01" min="0.01" max="99.99" required>
             <p>%</p>
         </div>
         <div>
