Ajout de l'attribut alt au logo GitHub après analyse SonarQube

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         <p>The code is available on :</p>
         <a href="https://github.com/anthirion/mortgage_interests">
             <div class="codeLink">
-                <img src="img/GitHubLogo.png">
+                <img src="img/GitHubLogo.png" alt="GitHub logo">
                 <p>GitHub</p>
             </div>
         </a>
